--- a/src/app/ui-components/editors/parameter-editor/parameter-editor.component.html
+++ b/src/app/ui-components/editors/parameter-editor/parameter-editor.component.html
@@ -2,18 +2,21 @@
   	<mat-expansion-panel-header>
 	    <mat-panel-title class='header'>
 	     	 <div class='header'>		
-	      			Input Designer
+	      			Node Designer
 					<div class='btn-group'>
-						<button (click)="addInput()">+</button>
+						<button (click)="addPort('input')">I</button>
+						<button (click)="addPort('output')">O</button>
 					</div>
 			</div>
 	    </mat-panel-title>
   	</mat-expansion-panel-header>
 	<div class='container'>
-		<div class='input' *ngFor="let inp of _inputs">
+
+		<h4>Inputs</h4>
+		<div class='input' *ngFor="let inp of _inputs; let i=index">
 			<div class='row'>
 				<span class='label'>Name</span>
-				<span class='content' contenteditable="true" (blur)="updateInputName($event, inp)">
+				<span class='content' contenteditable="true" (blur)="updatePortName($event, inp)">
 					{{ inp.getName() || "undefined" }}
 				</span>
 			</div>
@@ -31,7 +34,24 @@
 					{{inp.getDefaultValue() || "undefined"}}
 				</span>
 			</div>
-			<span class='btn btn-small' (click)='deleteInput(inp)'>Delete</span>
+			<span class='btn btn-small' (click)='deletePort("input", i)'>Delete</span>
+		</div>
+		
+		<h4>Outputs</h4>
+		<div class='input' *ngFor="let output of _outputs; let o=index">
+			<div class='row'>
+				<span class='label'>Name</span>
+				<span class='content' contenteditable="true" (blur)="updateOutputName($event, output)">
+					{{ output.getName() || "undefined" }}
+				</span>
+			</div>
+			<div class='row'>
+				<span class='label'>Default</span>
+				<span class='content' contenteditable="true" (blur)="updateDefaultValue($event, output)">
+					{{ output.getDefaultValue() || "undefined"}}
+				</span>
+			</div>
+			<span class='btn btn-small' (click)='deletePort("output", o)'>Delete</span>
 		</div>
 	</div>
 </mat-expansion-panel>
