--- a/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
+++ b/src/app/ui-components/editors/procedure-editor/procedure-editor.component.html
@@ -4,72 +4,59 @@
 	      <div>Procedure</div>
 	      <div class='btn-group'>
 			<button *ngFor="let type of procedureTypes"
-			 (click)="addProcedure(type)">{{getString(type)}}</button>
+			 (click)="addProcedure($event, type)">{{getString(type)}}</button>
 		  </div>
 	    </mat-panel-title>
   	</mat-expansion-panel-header>
 	<div class='container'>
-		<tree-root #tree [nodes]='_tree' [options]='_tree_options'>
+		<tree-root #tree [nodes]='_tree' [options]='_tree_options'  (moveNode)="onMoveNode($event)">
 			  <ng-template #treeNodeTemplate let-prod let-index="index">
+
 					<!-- template for data -->
-					<div>
+					<div *ngIf="prod.data.name == 'Data'"> 
 						<div class='data-node-template procedure'>
-							<span contenteditable="true" (blur)="updateProcedure($event, prod, 'left')">
-								{{prod.data.leftExpression}}
-							</span> 
-							{{prod.data.leftExpression}}={{prod.data.rightExpression}} 
-							<span contenteditable="true" (blur)="updateProcedure($event, prod, 'right')">
-								{{prod.data.rightExpression}}
-							</span>
-						</div>
-					</div>
-
-					<!-- template for action -->
-					<!-- <div *ngIf="prod.data.type == 'Action'">
-						<div class='data-node-template procedure'>
-							<span class='editable' contenteditable="true" (blur)="updateProcedure($event, prod, 'left')">
-								{{prod.getLeftComponent().expression}}
-							</span> 
+							<input class="tree-input" [(ngModel)]="prod.data.leftExpression" #ctrl="ngModel" required
+							(change)="updateProcedure($event, prod, 'left')">
 							=
-							<span>{{prod.getRightComponent().expression}}
-								(	
-								<span *ngFor="let arg of prod.getRightComponent().params" contenteditable="true" (blur)="updateProcedure($event, prod, 'right')">
-									{{ arg.value || arg.type }}
-								</span>
-								)
-							</span>
+							<input class="tree-input" [(ngModel)]="prod.data.rightExpression" #ctrl="ngModel" required
+							(change)="updateProcedure($event, prod, 'right')">
 						</div>
-					</div> -->
-
-					<!-- template for control -->
-					<!-- todo -->
-					<!-- <div *ngIf="prod.data.type == 'Control'">
-						
-						for each
-						<div class='data-node-template procedure' *ngIf="prod.data.name == 'for each'">
-							for 
-							<span contenteditable="true" (blur)="updateProcedure($event, prod, -1)">{{ prod.data.result }}</span> 
-							in 
-							<span contenteditable="true" (blur)="updateProcedure($event, prod, 1)">{{prod.data.expression}}</span>
-						</div>
-					
-						if else
-						<div class='data-node-template procedure' *ngIf="prod.data.name == 'if'">
-							if <span contenteditable="true" (blur)="updateProcedure($event, prod, 1)">( {{prod.data.expression}} )</span>
-						</div>
-					
-						if / else
-						<div class='data-node-template procedure' *ngIf="prod.data.name != 'for each' && prod.data.name != 'if'">
-							<span>{{ prod.data.name }}</span>
-						</div>
-					
-					</div> -->
-
-				    <div class='btn-group'>
-					    <button (click)="deleteProcedure(index, $event)">Delete</button>
-					    <button (click)="disableProcedure(index, $event)">Disable</button>
-					    <button (click)="go($event)">Copy</button>
 					</div>
+
+					<div *ngIf="prod.data.name == 'IfElse'">
+						<div class='data-node-template procedure'>
+							If-Else
+						</div>
+					</div>
+
+					<div *ngIf="prod.data.name == 'If'">
+						<div class='data-node-template procedure'>
+						 If ( <input class="tree-input" [(ngModel)]="prod.data.leftExpression" #ctrl="ngModel" required
+							(change)="updateProcedure($event, prod, 'left')"> )
+						</div>
+					</div>
+
+					<div *ngIf="prod.data.name == 'Else'">
+						<div class='data-node-template procedure'>
+						 Else 
+						</div>
+					</div>
+
+					<div *ngIf="prod.data.name == 'For Loop'">
+						<div class='data-node-template procedure'>
+						 for (  
+						  <input class="tree-input" [(ngModel)]="prod.data.leftExpression" #ctrl="ngModel" required (change)="updateProcedure($event, prod, 'left')">
+						 in  
+						  <input class="tree-input" [(ngModel)]="prod.data.rightExpression" #ctrl="ngModel" required (change)="updateProcedure($event, prod, 'right')"> 
+						  )
+						</div>
+					</div>
+				
+				    <!-- <div class='btn-group'>
+				    					    <button (click)="deleteProcedure(prod)">Delete</button>
+				    					    <button (click)="disableProcedure(prod, $event)">Disable</button>
+				    					    <button (click)="go($event)">Copy</button>
+				    					</div> -->
 
 			  </ng-template>
 		</tree-root>
