--- a/src/app/ui-components/editors/procedure-editor/procedure-editor.component.scss
+++ b/src/app/ui-components/editors/procedure-editor/procedure-editor.component.scss
@@ -29,6 +29,21 @@
 
 	}
 
+	input.tree-input{
+		background-color: transparent;
+		width: auto;
+		border: 0px; 
+		height: 18px; 
+		font-size: 14px;
+		padding: 5px; 
+		display: inline;
+		font-family: sans-serif;
+		line-height: 18px;
+		text-align: center;
+		vertical-align: middle;
+		border-bottom: 1px dashed blue;
+	}
+
 		
 }
 
