--- a/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
+++ b/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
@@ -32,6 +32,12 @@
 
 		#graph-edges{
 			background-color: transparent;
+
+			#temporary-edge{
+				.hidden{
+					display: none;
+				}
+			}
 		}
 
 		#graph-nodes{
@@ -47,7 +53,6 @@
 		.node{
 			position: absolute;
 			z-index: 3;
-			cursor: move !important;
 			margin: 0px;
 			min-width: 70px;
 
@@ -57,6 +62,8 @@
 				border-radius: 10px;
 				background-color: white;
 				text-align: center;
+				cursor: move !important;
+
 
 				&.selected{
 					background-color: #A4EAA4;
@@ -67,7 +74,7 @@
 				height: 10px;
 				width: 100%;
 				text-align: center;
-				z-index: 4;
+				z-index: 1;
 
 				&.input{
 					margin-top: -2px;
@@ -92,6 +99,10 @@
 					&:hover{
 						background-color: orange;
 						cursor: pointer;
+					}
+
+					&.connected{
+						background-color: green;
 					}
 				}
 
