--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,23 +13,23 @@
 
 	<div class="container">
     	<split [gutterSize]="10" [visibleTransition]="true">
-        <split-area [visible]="true" [size]="20">
-				<div class="output-viewer">
-					<app-flowchart-controls></app-flowchart-controls>
-					<!-- <app-geometry-viewer></app-geometry-viewer> -->
-					<!-- <app-code-viewer></app-code-viewer>	 -->		
-				</div>
-        </split-area>
+       <split-area [visible]="true" [size]="20">
+       			<div class="output-viewer">
+       				<app-geometry-viewer></app-geometry-viewer>
+       				<!-- <app-flowchart-controls></app-flowchart-controls> -->
+       				<app-code-viewer></app-code-viewer>		
+       			</div>
+       </split-area>
 
-        <split-area [visible]="true" [size]="50">
+        <split-area [visible]="true" [size]="60">
+        	<app-parameter-viewer></app-parameter-viewer>
 			<app-flowchart-viewer></app-flowchart-viewer>
         </split-area>
 
-        <split-area [visible]="true" [size]="30">
-        			<app-parameter-editor></app-parameter-editor>
-        			<app-procedure-editor></app-procedure-editor>
-        			<!-- <app-module-viewer></app-module-viewer> -->
-        			<app-parameter-viewer></app-parameter-viewer>
+        <split-area [visible]="true" [size]="40">
+			<app-parameter-editor></app-parameter-editor>
+			<app-procedure-editor></app-procedure-editor>
+			<!-- <app-module-viewer></app-module-viewer> -->
         </split-area>
     	</split>
 	</div>
