--- a/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
+++ b/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
@@ -57,20 +57,31 @@
 			min-width: 70px;
 
 			.node-body{
+				position: relative;
 				height: 60px;
 				border: 3px solid black;
 				border-radius: 10px;
 				background-color: white;
 				text-align: center;
-				cursor: move !important;
-
+				cursor: move;
+				
 
 				&.selected{
 					background-color: #A4EAA4;
 				}
+
+				.node-name{
+					font-family: sans-serif; 
+					font-size: 14px; 
+					line-height: 16px;
+
+				}
+
+				
 			}
 
 			.port-container{
+				position: relative;
 				height: 10px;
 				width: 100%;
 				text-align: center;
@@ -103,6 +114,27 @@
 
 					&.connected{
 						background-color: green;
+					}
+				}
+
+				.btn-sm{
+					position: absolute; 
+					right: -15px;
+					border: 2px solid gray;
+					color: gray;
+					height: 15px; 
+					width: 15px;
+					font-size: 10px; 
+					line-height: 15px;
+					cursor: pointer;
+
+					&.input{
+						top: -5px; 
+					}
+
+					&.output{
+						bottom: 0px; 
+						left: -15px;
 					}
 				}
 
