Code Execution Works

--- a/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.html
+++ b/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.html
@@ -6,6 +6,7 @@
 	      <div class='btn-group' click-stop-propagation>
 			<!-- <button (click)="resetViewer()">R</button> -->
 			<button (click)="addNode($event)">+</button>
+			<button (click)="executeFlowchart($event)">></button>
 		  </div>
 	    </mat-panel-title>
   	</mat-expansion-panel-header>
