--- a/src/app/ui-components/controls/main-menu/menu.component.scss
+++ b/src/app/ui-components/controls/main-menu/menu.component.scss
@@ -22,6 +22,7 @@
 	#branding{
 		font-weight: bolder;
 		cursor: pointer;
+		font-size: 14px;
 	}
 
 
@@ -30,6 +31,11 @@
 		@extend .reset;
 
 		list-style: none;
+
+		.menu{
+			margin-left: 10px;
+			width: 200px;
+		}
 
 		li{
 			display: inline;
@@ -40,8 +46,10 @@
 				color: #5D5959;
 				cursor: pointer;
 			}
+
 		}
 	}
 
 
 }
+
