--- a/src/app/ui-components/editors/parameter-editor/parameter-editor.component.scss
+++ b/src/app/ui-components/editors/parameter-editor/parameter-editor.component.scss
@@ -3,32 +3,62 @@
 .viewer{
 	@extend .viewer;
 
-	.input{
-		padding: 0px 15px;
-		border-bottom: 1px solid gray;
+	.port-heading{
+		display: inline-block;
+		margin: 10px;
+		font-size: 14px;
+		line-height: 24px;
+		padding: 0px 4px;
+		border: 1px solid #777;
+	}
+
+	.port{
+		display: flex; 
+		flex-direction: row; 
+		justify-content: space-between;
+
+		margin: 10px;
+		border-bottom: 1px dashed gray;
+		border-top: 1px dashed gray;
+
+		background-color: #ddd;
+
+		.content{
+			display: flex;
+			flex-direction: column;
+			font-size: 14px;
+			line-height: 20px;
 	
-		.row{
-			width: 100%; 
+			.row{
+				
+				display: flex; 
+				flex-direction: row;
 
-			.label{
-				display: inline-block;
-				text-transform: uppercase;
-				font-size: 10px; 
-				color: gray; 
-				width: 10%; 
-				min-width: 50px;
-			}
+				.label{
+					display: inline-block;
+					text-transform: uppercase;
+					font-size: 10px; 
+					color: gray; 
+					min-width: 50px;
+				}
 
-			.content{
-				width: 90%;
-				min-width: 50px;
+				.content{
+					min-width: 50px;
 
-
-				&.undefined{
-					border-bottom: 1px dashed blue;
+					&.undefined{
+						border-bottom: 1px dashed blue;
+					}
 				}
 			}
 		}
+
+		.controls{
+			.btn:hover{
+				cursor: pointer;
+				border-bottom: 1px dashed blue;
+			}
+		}
+	
 	}
 	
 
