--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,40 +1,27 @@
 <div id="app-container">
-	<app-menu></app-menu>
-	<!-- <div class="container">
-		<app-flowchart-controls></app-flowchart-controls>
-		<app-flowchart-viewer></app-flowchart-viewer>
-		<app-parameter-editor></app-parameter-editor>
-		<app-parameter-viewer></app-parameter-viewer>
-		<app-procedure-editor></app-procedure-editor>
-		<app-module-viewer></app-module-viewer>
-		<app-geometry-viewer></app-geometry-viewer>
-		<app-code-viewer></app-code-viewer>
-	</div> -->
-	<!-- <div class="container">
-		<app-flowchart-viewer></app-flowchart-viewer>
-	   	<app-geometry-viewer></app-geometry-viewer>
-	   	<app-code-viewer></app-code-viewer>		
-	   	<app-parameter-viewer></app-parameter-viewer>
-		<app-parameter-editor></app-parameter-editor>
-		<app-procedure-editor></app-procedure-editor>
-	</div> -->
-
-
-    	<!-- <split [gutterSize]="10" [visibleTransition]="true">
-    	       <split-area [visible]="true" [size]="20">
-    	       			<div class="output-viewer">
-    	       				<app-flowchart-controls></app-flowchart-controls>
-    	       				
-    	       			</div>
-    	       </split-area>
-    	
-    	        <split-area [visible]="true" [size]="60">
-    	        	
-    	        </split-area>
-    	
-    	        <split-area [visible]="true" [size]="40">
-    							<app-module-viewer></app-module-viewer>
-    	        </split-area>
-    	</split> -->
-
+  <app-menu></app-menu>
+  <div class="container">
+    <app-flowchart-viewer></app-flowchart-viewer>
+    <app-procedure-editor></app-procedure-editor>
+    <app-parameter-editor></app-parameter-editor>
+    <app-parameter-viewer></app-parameter-viewer>
+    <app-geometry-viewer></app-geometry-viewer>
+    <app-code-viewer></app-code-viewer>
+  </div>
+		<!-- <split direction="horizontal" 
+                       disabled="false"
+                       [visibleTransition]="action.useTransition">
+                    <split-area [size]="10" order="1">
+                       <app-geometry-viewer></app-geometry-viewer>
+                       <app-code-viewer></app-code-viewer>
+                    </split-area>
+                    <split-area [size]="action.a2s" order="2">
+                       <app-flowchart-viewer></app-flowchart-viewer>
+                       <app-parameter-viewer></app-parameter-viewer>
+                    </split-area>
+                    <split-area [size]="10" order="3">
+                        <app-procedure-editor></app-procedure-editor>
+                        <app-parameter-editor></app-parameter-editor>
+                    </split-area>
+            </split> -->
 </div>
