--- a/src/app/ui-components/editors/parameter-editor/parameter-editor.component.html
+++ b/src/app/ui-components/editors/parameter-editor/parameter-editor.component.html
@@ -1,12 +1,11 @@
-<mat-expansion-panel class='viewer'  [class.hidden]="!isVisible">
+<mat-expansion-panel class='viewer'  [class.hidden]="!isVisible" [expanded]="true">
   	<mat-expansion-panel-header>
 	    <mat-panel-title class='header'>
-	     	 <div class='header'>Node Designer	
+	     	 Node Designer	
 					<!-- <div class='btn-group'>
 						<button (click)="addPort($event, 'input')">I</button>
 						<button (click)="addPort($event, 'output')">O</button>
 					</div> -->
-			</div>
 	    </mat-panel-title>
   	</mat-expansion-panel-header>
 	<div class='container'>
