--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,19 +1,101 @@
 @import '../scss/globals';
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
+$header-height: 45px;
+
 #app-container{
+
+	border: 1px solid red;
+
 	margin: 0px;
 	padding: 0px;
 
-	.container{
+	.header{
+		position: absolute;
+		top: 0px;
+		left: 0px; 
 
+		height: $header-height; 
+		width: 100%;
+
+		overflow: hidden;
 	}
 
-	-webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;	
+	.container{
+		position: absolute;
+		top: $header-height;
+		left: 0px; 
+
+		display: flex; 
+		flex-direction: row; 
+		justify-content: space-between;
+
+		height: calc(100% - 45px);
+		width: 100%;
+
+		overflow: hidden;
+
+		.subcontainer{
+			position: relative;
+			height: 100%; 
+			border-right: 2px solid gray;
+
+			display: flex; 
+			flex-direction: column; 
+			justify-content: flex-start;
+
+			&.viewer-container{
+				flex-grow: 0.2;
+			}
+
+			&.flowchart-container{
+				flex-grow: 3;
+			}
+
+			&.editor-container{
+				flex-grow: 1;
+			}
+
+			&.expand{
+				flex-grow: 2; 
+			}
+
+			.view{
+
+
+			}
+
+			.toggle-btn{
+				position: absolute;
+				bottom: calc(50%);
+				height: 15px;
+				width: 15px; 
+				background-color: white;
+				border: 1px solid black;
+				z-index: 10;
+				cursor: pointer;
+
+				&.right{
+					right: 0px;
+					margin-right: -18px;
+				}
+
+				&.left{
+					left:  0px;
+					margin-left: -18px;
+				}
+			}
+
+		}
+	}
+
+	/* .container{
+		height: 100%;
+		display: flex;
+		flex-direction: row; 
+		flex-wrap: wrap;
+		justify-content: space-between;
+	} */
+
 }
 
