--- a/src/app/ui-components/editors/procedure-editor/procedure-editor.component.scss
+++ b/src/app/ui-components/editors/procedure-editor/procedure-editor.component.scss
@@ -4,8 +4,10 @@
 	@extend .viewer;
 
 	.container{
+		position: relative;
 
 		.procedure{
+
 			padding: 4px; 
 			width: 100%;
 
@@ -27,6 +29,17 @@
 
 		}
 
+		.btn-container{
+			position: absolute;
+			bottom: 0px; 
+			left: 30%;
+
+			button{
+				height: 30px; 
+				width: 30px;
+			}
+		}
+
 	}
 
 	input.tree-input{
@@ -43,6 +56,7 @@
 		vertical-align: middle;
 		border-bottom: 1px dashed blue;
 	}
+
 
 		
 }
