--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,34 +7,31 @@ html{
 	position: relative;
 	height: 100%; 
 	width: 100%; 
+
 	padding: 0px;
 	margin: 0px;
 
 	font-family: sans-serif;
 	font-size: 12px;
 	line-height: 14px; 
-
 }
 
 body{
+	position: relative;
+	width: 100%;
 	height: 100%; 
+
 	padding: 0px;
 	margin: 0px; 
 
 	background-color: #E3E3E3;
+
+	overflow: hidden;
 }
 
-.container{
-	height: 100%;
-	display: flex;
-	flex-direction: row; 
-	flex-wrap: wrap;
-	justify-content: space-between;
-}
+
 
 // overrides for plugins
-
-
 // angular-split
 split-gutter{
 	min-height: 400px !important;
@@ -46,7 +43,9 @@ split-gutter{
 }
 
 // angular-tree-component
-
+.mat-expansion-panel{
+	overflow: hidden !important;
+}
 
 .mat-expansion-panel:not([class*=mat-elevation-z]){
 	box-shadow: none;
@@ -56,13 +55,14 @@ split-gutter{
 }
 
 .mat-expansion-panel-header{
-	padding: 0 10px !important;
+	//padding: 0 10px !important;
 	height: 36px !important;
+	border-bottom: 1px solid gray;
+	border-top: 1px solid gray;
 }
 
 .mat-expansion-panel:not([class*=mat-elevation-z]){
 	border: 0px !important;
-	border-bottom: 1px solid gray !important;
 	box-shadow: none !important;
 }
 
@@ -70,6 +70,7 @@ split-gutter{
 .mat-menu-content{
 	background-color: transparent;
 	padding: 0px;
+	
 }
 
 .mat-menu-item{
