--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,8 +19,8 @@
     
     <div class="subcontainer editor-container" [class.expand]="isExpanded.editor">
         <div class="toggle-btn left" (click)="toggleEditor()"></div>
-        <app-procedure-editor class="view"></app-procedure-editor>
-        <app-parameter-editor class="view"></app-parameter-editor>
+        <app-procedure-editor class="procedure-editor"></app-procedure-editor>
+        <app-parameter-editor class="parameter-editor"></app-parameter-editor>
     </div>
     <!-- <app-flowchart-viewer></app-flowchart-viewer>
     <app-procedure-editor></app-procedure-editor>
