--- a/src/app/ui-components/viewers/parameter-viewer/parameter-viewer.component.html
+++ b/src/app/ui-components/viewers/parameter-viewer/parameter-viewer.component.html
@@ -1,4 +1,4 @@
-<mat-expansion-panel class='viewer' [class.hidden]="false">
+<mat-expansion-panel class='viewer' [class.hidden]="!isVisible" [expanded]="true">
   	<mat-expansion-panel-header>
 	    <mat-panel-title class='header'>
 	      <div class='header'>Parameter Viewer</div>
