--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,15 +15,16 @@ $header-height: 45px;
 		top: 0px;
 		left: 0px; 
 
-		height: $header-height; 
+		height: 45px;
 		width: 100%;
 
 		overflow: hidden;
+		background: #ADADAD;
 	}
 
 	.container{
 		position: absolute;
-		top: $header-height;
+		top: 45px;
 		left: 0px; 
 
 		display: flex; 
@@ -50,10 +51,19 @@ $header-height: 45px;
 
 			&.flowchart-container{
 				flex-grow: 3;
+				justify-content: space-between;
 			}
 
 			&.editor-container{
-				flex-grow: 1;
+				flex-grow: 0;
+
+				.procedure-editor{
+					flex-grow: 2;
+				}
+
+				.parameter-editor{
+					flex-grow: 1;
+				}
 			}
 
 			&.expand{
@@ -67,22 +77,20 @@ $header-height: 45px;
 
 			.toggle-btn{
 				position: absolute;
-				bottom: calc(50%);
-				height: 15px;
+				height: 100%;
 				width: 15px; 
-				background-color: white;
-				border: 1px solid black;
+				background-color: gray;
 				z-index: 10;
 				cursor: pointer;
 
 				&.right{
 					right: 0px;
-					margin-right: -18px;
+					margin-right: -15px;
 				}
 
 				&.left{
 					left:  0px;
-					margin-left: -18px;
+					margin-left: -15px;
 				}
 			}
 
